add resizing of camera; new defaults in nopaint system; ios support for camera

--- a/system/public/aesthetic.computer/style.css
+++ b/system/public/aesthetic.computer/style.css
@@ -214,3 +214,10 @@ canvas[data-type="3d"].visible {
   outline: none;
   box-shadow: none;
 }
+
+#camera-feed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
