--- a/system/public/aesthetic.computer/style.css
+++ b/system/public/aesthetic.computer/style.css
@@ -76,7 +76,54 @@ form {
   z-index: 5;
   pointer-events: all;
   touch-action: manipulation;
-  background: gray;
+  background: rgba(0, 0, 0, 0.25);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  font-family: YWFTProcessing-Regular, sans-serif;
+  font-size: 4vmin;
+  /* font-family: Berkeley Mono Variable, sans serif; */
+}
+
+#recordings video {
+  height: 80%;
+  width: 100%;
+}
+
+#recordings a, #recordings-close {
+  text-align: center;
+}
+
+#recordings a {
+  color: white;
+  padding: 2vmin;
+  text-decoration: none;
+  background: rgba(0, 0, 200, 1);
+  cursor: none;
+}
+
+#recordings a:hover {
+  background: rgba(0, 0, 255, 1);
+}
+
+#recordings-close:hover {
+  background: rgba(255, 0, 0, 1);
+}
+
+#recordings-close {
+  display: inline-block;
+  padding: 2vmin;
+  background: rgba(200, 0, 0, 1);
+}
+
+#recordings-wrapper {
+  border-radius: 2vmin;
+  width: 80vw;
+  height: 80vh;
+  margin: auto;
+  background: rgba(127, 127, 127, 1);
+  display: flex;
+  flex-direction: column;
 }
 
 /* Picture in Picture */
