get sandboxed iframe working for `ff` pages in addition to brushes (could still be some issues across the system)

--- a/system/public/aesthetic.computer/style.css
+++ b/system/public/aesthetic.computer/style.css
@@ -1,5 +1,5 @@
-@import "/type/webfonts/berkeley-mono-variable.css";
-@import "/type/webfonts/ywft-processing-regular.css";
+/* @import "/type/webfonts/berkeley-mono-variable.css"; */
+/* @import "/type/webfonts/ywft-processing-regular.css"; */
 
 :root {
   color-scheme: dark;
