--- a/system/public/aesthetic.computer/style.css
+++ b/system/public/aesthetic.computer/style.css
@@ -108,7 +108,8 @@ form {
   width: 100%;
 }
 
-#recordings a, #recordings-close {
+#recordings a,
+#recordings-close {
   text-align: center;
 }
 
@@ -239,7 +240,14 @@ canvas[data-type="freeze"] {
 canvas[data-type="ui"] {
   z-index: 6;
   filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
-  transform: rotateX(0.01deg);
+  /* This is *really* slow. */
+  /* display: none; */
+}
+
+canvas[data-type="debug"] {
+  z-index: 7;
+  /* filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5)); */
+  /* transform: rotateX(0.01deg); */
   /* Make sure we are using the GPU compositor. */
   /* display: none; */
 }
