--- a/digitpain.com/style.css
+++ b/digitpain.com/style.css
@@ -1,138 +1,71 @@
-:root {
-  --backdrop: rgb(6, 6, 6);
-  color-scheme: dark;
+#aesthetic {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  border: 0;
 }
 
-@font-face {
-  font-family: 'Berkeley Mono';
-  font-weight: normal;
-  font-style: normal;
-  src: url('/assets/fonts/BerkeleyMono-Regular.woff2') format('woff2'),
-  url('/assets/fonts/BerkeleyMono-Regular.woff') format('woff');
-}
-
-@font-face {
-  font-family: 'Berkeley Mono';
-  font-weight: normal;
-  font-style: italic;
-  src: url('/assets/fonts/BerkeleyMono-Italic.woff2') format('woff2'),
-  url('/assets/fonts/BerkeleyMono-Italic.woff') format('woff');
-}
-
-@font-face {
-  font-family: 'Berkeley Mono';
-  font-weight: bold;
-  font-style: normal;
-  src: url('/assets/fonts/BerkeleyMono-Bold.woff2') format('woff2'),
-  url('/assets/fonts/BerkeleyMono-Bold.woff') format('woff');
-}
-
-@font-face {
-  font-family: 'Berkeley Mono';
-  font-weight: bold;
-  font-style: italic;
-  src: url('/assets/fonts/BerkeleyMono-BoldItalic.woff2') format('woff2'),
-  url('/assets/fonts/BerkeleyMono-BoldItalic.woff') format('woff');
+html {
+  height: 100%;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  background: var(--backdrop);
-  color: rgb(240, 240, 240);
-  font-family: 'Berkeley Mono', monospace;
-  font-size: 14px;
-  -webkit-text-size-adjust: 100%;
-  line-height: 135%;
-  width: 100%;
-  height: 100%;
+  font-size: 100%;
   margin: 0;
-  padding: 0;
-  overflow-x: hidden;
+  font-family: monospace;
+  /* background-color: rgb(178, 225, 157); */
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 0, 0);
+  -webkit-text-size-adjust: none;
 }
 
-::selection {
-  color: var(--backdrop);
-  background: white;
+#wrapper {
+  background: rgba(0, 0, 0, 0.8);
+  padding: 0.5em 0.5em 0.05em 0.5em;
 }
 
-a {
-  color: rgb(220, 220, 220);
-  white-space: nowrap;
+a, a:visited:hover {
+  color: rgb(255, 0, 0);
 }
 
-#url a {
-  white-space: normal;
-  word-break: break-all;
+a:active, a:visited:active {
+  color: rgb(255, 230, 0);
+}
+
+a:visited {
+  color: rgb(152, 15, 15);
 }
 
 a:hover {
-  color: rgb(250, 250, 250);
+  color: rgb(255, 150, 0);
 }
 
-em {
-  color: rgb(96, 96, 96);
-  font-style: normal;
+h1,
+h2 {
+  font-size: 1em;
 }
 
-footer {
-  flex-grow: 1;
-  max-width: 100%;
-  position: relative;
-  padding: 2em 1em 1em 1em;
-  background: linear-gradient(rgb(34, 34, 34), rgb(16, 16, 16));
+mark {
+  color:rgb(166, 201, 208);
+  background: black;
 }
 
-footer::before {
-  content: '';
-  display: block;
-  position: absolute;
-  top: -1px;
-  left: 0;
-  width: 100%;
-  height: 1em;
-  background: blue;
-  background: linear-gradient(var(--backdrop) 10%, rgb(28, 28, 28) 100%);
+hr {
+  margin-top: 0.5em;
+  width: calc(100% + 1em);
+  margin-left: -0.5em;
+  height: 6px;
+  border-left: none;
+  border-right: none;
+  border-width: 2px;
+  background-color: rgb(59, 7, 7);
+  border-color: rgb(176, 35, 35);
 }
 
-.hidden { display: none; }
-
-#wrapper {
-  position: relative;
-  display: block;
-  padding: 0;
-  width: 100%;
-  box-sizing: border-box;
-  height: auto;
-}
-
-#footer-content {
-  margin: auto;
-}
-
-#img {
-  display: block;
-  box-sizing: border-box;
-  margin: auto;
-  border: none;
-  image-rendering: pixelated;
-  background-color: transparent;
-}
-
-#digitpain {
-  color: white;
-}
-
-#parable {
-  font-style: normal;
-  text-transform: uppercase;
-}
-
-.indent {
-  text-indent: -4.8em;
-  padding-left: 4.8em;
-}
-
-audio#background-music {
-  display: none;
+ol {
+  padding-left: 1.8em;
+  list-style-type: lower-alpha;
 }
