add redis caching to handleFor api; replace default precise cursor with svg and add checkboard background

--- a/system/public/aesthetic.computer/style.css
+++ b/system/public/aesthetic.computer/style.css
@@ -18,6 +18,10 @@ body {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
   -webkit-text-size-adjust: none;
+  background-image: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjAiIGhlaWdodD0iMjAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHJlY3QgeD0iMCIgeT0iMCIgd2lkdGg9IjEwIiBoZWlnaHQ9IjEwIiBmaWxsPSIjMzAzMDMwIj48L3JlY3Q+PHJlY3QgeD0iMTAiIHk9IjEwIiB3aWR0aD0iMTAiIGhlaWdodD0iMTAiIGZpbGw9IiMzMDMwMzAiPjwvcmVjdD48L3N2Zz4=");
+  background-size: 4px 4px;
+  background-repeat: repeat;
+  cursor: url('cursors/precise.svg') 12 12, auto;
 }
 
 * {
@@ -48,6 +52,7 @@ form {
 #aesthetic-computer {
   position: relative;
   overflow: hidden;
+  border-radius: 2.5px;
 }
 
 #aesthetic-computer.hidden {
@@ -244,7 +249,7 @@ canvas[data-type="freeze"] {
 
 canvas[data-type="ui"] {
   z-index: 6;
-  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+  /* filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5)); */
   /* This is *really* slow. */
   /* display: none; */
 }
