tap and hold to save painting (or right click to save) / change painting preload code

--- a/system/public/aesthetic.computer/style.css
+++ b/system/public/aesthetic.computer/style.css
@@ -74,6 +74,7 @@ form {
   z-index: 4;
   pointer-events: all;
   touch-action: manipulation;
+  -webkit-touch-callout: default;
   display: flex;
 }
 
