--- a/system/public/aesthetic.computer/style.css
+++ b/system/public/aesthetic.computer/style.css
@@ -92,10 +92,11 @@ form {
 #underlay video {
   width: 100%;
   height: 100%;
-  /* Checkeboard background... */
+  /* Checkerboard background... */
   /* background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='2' height='2'><rect x='0' y='0' width='1' height='1' fill='%23fff' fill-opacity='0.1'/><rect x='1' y='1' width='1' height='1' fill='%23fff' fill-opacity='0.1'/></svg>"); */
   /* background-size: 12px; */
   object-fit: contain;
+  /* object-fit: cover; */
   background: rgb(32, 32, 32);
 }
 
