--- a/system/public/aesthetic.computer/checkout.css
+++ b/system/public/aesthetic.computer/checkout.css
@@ -2,41 +2,64 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 5; /* Above the `#content` frame from `style.css` */
+  z-index: 5;
   display: flex;
-  justify-content: center;
-  align-content: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.5);
+  overflow-y: scroll;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+#ticket.hidden {
+  display: none;
 }
 
 #payment-form {
   width: 30vw;
   min-width: 500px;
-  align-self: center;
   box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
     0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
   border-radius: 7px;
-  padding: 40px;
-  box-sizing: border-box;
+  padding: 3%;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   pointer-events: all;
+  cursor: default;
+  margin: auto;
 }
 
 #payment-message.hidden,
-#spinner.hidden {
+#spinner.hidden,
+#button-text.hidden {
   display: none;
 }
 
+#payment-message-wrapper {
+  display: flex;
+}
+
 #payment-message {
-  color: rgb(105, 115, 134);
-  font-size: 16px;
+  color: #df1b41;
+  font-size: 24px;
   line-height: 20px;
   padding-top: 12px;
+  margin: 0.5em auto 0 auto;
+  background: rgba(255, 100, 100, 0.5);
+  font-weight: bold;
+  border-radius: 6px;
+  padding: 8px 12px;
   text-align: center;
+  display: inline-block;
+}
+
+#payment-description {
+  padding-top: 6px;
+  font-size: 14px;
+  text-align: center;
+  color: #30313D;
 }
 
 #payment-element {
@@ -51,7 +74,8 @@
   border-radius: 4px;
   border: 0;
   padding: 12px 16px;
-  font-size: 16px;
+  /* font-size: 16px; */
+  font-size: 32px;
   font-weight: 600;
   cursor: pointer;
   display: block;
@@ -77,73 +101,8 @@
 }
 
 #spinner.spinner {
-  color: #ffffff;
-  font-size: 22px;
-  text-indent: -99999px;
-  margin: 0px auto;
-  position: relative;
-  width: 20px;
-  height: 20px;
-  box-shadow: inset 0 0 0 2px;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-}
-
-#spinner.spinner:before,
-#spinner.spinner:after {
-  position: absolute;
-  content: "";
-}
-
-#spinner.spinner:before {
-  width: 10.4px;
-  height: 20.4px;
-  background: #5469d4;
-  border-radius: 20.4px 0 0 20.4px;
-  top: -0.2px;
-  left: -0.2px;
-  -webkit-transform-origin: 10.4px 10.2px;
-  transform-origin: 10.4px 10.2px;
-  -webkit-animation: payment-loading 2s infinite ease 1.5s;
-  animation: payment-loading 2s infinite ease 1.5s;
-}
-
-#spinner.spinner:after {
-  width: 10.4px;
-  height: 10.2px;
-  background: #5469d4;
-  border-radius: 0 10.2px 10.2px 0;
-  top: -0.1px;
-  left: 10.2px;
-  -webkit-transform-origin: 0px 10.2px;
-  transform-origin: 0px 10.2px;
-  -webkit-animation: payment-loading 2s infinite ease;
-  animation: payment-loading 2s infinite ease;
-}
-
-@-webkit-keyframes payment-loading {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes payment-loading {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+  font-size: 32px;
+  color: darkgreen;
 }
 
 @media only screen and (max-width: 600px) {
@@ -151,4 +110,13 @@
     width: 80vw;
     min-width: initial;
   }
+}
+
+/* botce */
+#payment-form.botce button {
+  background: green;
+}
+
+#payment-form.botce #button-text {
+  color: white;
 }
