dont crash on glaze if webgl is disabled; update `sprite` for 12xN sheets; start `sno` code

--- a/system/public/aesthetic.computer/style.css
+++ b/system/public/aesthetic.computer/style.css
@@ -246,11 +246,11 @@ canvas[data-type="freeze"] {
   pointer-events: none;
 }
 
-/*
-canvas[data-type="glaze"] {
+
+canvas[data-type="glaze"].first-glaze {
   transition: 0.5s opacity;
 }
-*/
+
 
 canvas[data-type="glaze"] {
   z-index: 2;
