--- a/vscode-extension/vscode.css
+++ b/vscode-extension/vscode.css
@@ -89,3 +89,9 @@ input::placeholder,
 textarea::placeholder {
   color: var(--vscode-input-placeholderForeground);
 }
+
+iframe {
+  width: 100%;
+  height: 320px;
+  border: none;
+}
