--- a/vscode-extension/vscode.css
+++ b/vscode-extension/vscode.css
@@ -1,5 +1,5 @@
 :root {
-  --container-paddding: 20px;
+  --container-paddding: 0px;
   --input-padding-vertical: 6px;
   --input-padding-horizontal: 4px;
   --input-margin-vertical: 4px;
@@ -7,12 +7,16 @@
 }
 
 body {
-  padding: 0 var(--container-paddding);
+  padding: 0;
   color: var(--vscode-foreground);
   font-size: var(--vscode-font-size);
   font-weight: var(--vscode-font-weight);
   font-family: var(--vscode-font-family);
   background-color: var(--vscode-editor-background);
+  margin: 0;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
 }
 
 ol,
@@ -91,7 +95,9 @@ textarea::placeholder {
 }
 
 iframe {
-  width: 100%;
-  height: 320px;
+  width: 100vw;
+  height: 100vh;
   border: none;
+  box-sizing: border-box;
+  padding-bottom: 2px;
 }
