prevent font loading from blocking the initial ui

--- a/system/public/type/webfonts/berkeley-mono-variable.css
+++ b/system/public/type/webfonts/berkeley-mono-variable.css
@@ -4,6 +4,7 @@
 	     url('BerkeleyMonoVariable-Regular.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -12,4 +13,5 @@
 	url('BerkeleyMonoVariable-Italic.woff') format('woff');
 	font-weight: normal;
 	font-style: italic;
+	font-display: swap;
 }
