--- a/system/public/type/webfonts/ywft-processing-regular.css
+++ b/system/public/type/webfonts/ywft-processing-regular.css
@@ -24,4 +24,5 @@ License: 	The WebFont(s) listed in this document must follow the YouWorkForThem
 	     url('ywft-processing-regular.svg#youworkforthem') format('svg');
 	font-weight: normal;
 	font-style: normal;
+	font-display: swap;
 }
